--- a/5th/index.html
+++ b/5th/index.html
@@ -38,8 +38,8 @@
 						<nav>
 							<ul>
 								<li><a href="#about">About</a></li>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
+								<li><a href="#intro">Schedule</a></li>
+								<li><a href="#work">Reviews</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -48,35 +48,66 @@
 
 				<!-- Main -->
 					<div id="main">
-						
+
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/lion_head.jpg" alt="" /></span>
 								<p style="font-family: 'Noto Sans Kr';">전국적으로 확대된 지난 멋쟁이사자 처럼은 이제 각 대학별로 운영됩니다. 충남대학교의 비전공 학생들과 전공 학생들이 함께 어울려 웹서비스 개발을 배우고 만들고 직접 서비스합니다.</p>
 								<p style="font-family: 'Noto Sans Kr';">HTML/CSS/JAVASCRIPT를 이용한 웹 프로그래밍의 기초부터 jQuery와 같은 다양한 프론트엔드 라이브러리 및 프레임워크에 대한 스터디를 진행하고 Ruby On Rails와 Amazon Web Service를 이용한 웹 서비스 배포과정을 학습합니다.</p>
 							</article>
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<h2 class="major">Schedule</h2>
+								<ul style="font-family: 'Noto Sans kr' !important">
+									<li>
+										<p><h3 style="margin-bottom: 5px">5기 선발: 17.02.25 ~ 17.03.10</h3>
+										2017년 2월 25일부터 시작하여 3월 10일까지 지원을 받고 인원을 선발합니다. 모집 결과는 15일에 발표됩니다.</p>
+									</li>
+									<li>
+										<p><h3 style="margin-bottom: 5px">스터디 진행: 17.03.18 ~ 17.06.30</h3>
+										18일 오프닝 행사를 시작으로 3개월동안 웹 서비스를 개발하는 데에 필요한 것들을 배웁니다.</p>
+									</li>
+									<li>
+										<p><h3 style="margin-bottom: 5px">프로젝트 개발: 17.07.01 ~ 17.08.31</h3>
+										만들고 싶은 웹 서비스에 대한 아이디어를 가다듬고 팀원을 모집하고 추가적인 스터디 및 자료 수집, 연구 조사와 함께 웹 서비스를 개발합니다.</p>
+									</li>
+									<li>
+										<p><h3 style="margin-bottom: 5px">프로젝트 진행: 17.09.01 ~ 17.12.31</h3>
+										팀원들과 함께 실제 서비스를 위한 자세한 계획을 수립하며 웹 서비스 개발을 계속해서 진행합니다.</p>
+									</li>
+								</ul>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<h2 class="major">REVIEWS</h2>
+								<span class="image main"><img src="images/key.jpg" alt=""/></span>
+								<h3 style="margin-bottom: 5px; font-family: 'Noto Sans kr' !important;">이종찬, 천문우주과학과</h3>
+								<p style="font-family: 'Noto Sans kr' !important;">비전공자라 웹사이트를 만드는 것에는 아무런 지식이 없었지만, 멋쟁이 사자처럼을 통해서 여러가지를 배웠어요! 저랑은 전혀 관련이 없다고 생각된던 창업이라는 것에도 관심을 가졌고요!</p>
+
+								<h3 style="margin-bottom: 5px; 'Noto Sans kr' !important;">박상일, 정치외교학과</h3>
+								<p style="font-family: 'Noto Sans kr' !important;">
+								비전공자지만 나만의 웹서비스를 개발하겠다는 열정으로 달려온 지난 멋쟁이사자처럼의 활동은 비전공자의 눈높이에서 코딩이라는 생소한 개념을 쉽게 이해시켜 주고 새로운 가능성의 기회를 주었습니다. 여러분들도 동아리 활동을 통해 그 기회를 가져가셨으면 좋겠습니다. "누구난 도전 할 수 있지만 누구나 성공 할 순 없다. 포기하지 마세요. 코딩은 자기 수양에 좋은 활동입니다."</p>
+
+								<h3 style="margin-bottom: 5px; 'Noto Sans kr' !important;">김호현, 경영학과</h3>
+								<p style="font-family: 'Noto Sans kr' !important;">
+								경영학과 전공으로 코딩에 대해 아무 것도 몰랐지만 서비스를 출시하고자 하는 마음으로 도전했던 3개월! 짧은시간으로 부족한 점도 있지만 눈 앞의 결과물을 보고 나서 '정말 할 수 있는구나'라는 생각을 가지게 됐습니다. ㅎㅎ</p>
+
+								<h3 style="margin-bottom: 5px; 'Noto Sans kr' !important;">임정아, 컴퓨터공학과</h3>
+								<p style="font-family: 'Noto Sans kr' !important;">
+								전공자였지만 학교에서 서비스를 처음부터 끝까지 만들고 운영해본 경험을 배울 수는 없었습니다. 멋쟁이사자처럼을 통해 좋은 팀원과 값진 경험을 얻을 수 있었습니다.</p>
+
+								<h3 style="margin-bottom: 5px; 'Noto Sans kr' !important;">오종민, 컴퓨터공학과</h3>
+								<p style="font-family: 'Noto Sans kr' !important;">
+								어렵게만 느껴졌던 코딩을 너무나 쉽게 배울 수 있어서 좋았고, 평소 만들고 싶었던 나만의 서비스를 만들어서 부모님과 친구들에게 자랑했던 점이 큰 경험이었습니다.</p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form method="post" action="mailto:">
 									<div class="field half first">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" />
@@ -95,10 +126,10 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
+									<li><a href="https://www.facebook.com/likelioncnu/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
+									<!-- <li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li> -->
 								</ul>
 							</article>
 
